Configured available tree patches and their respective best seeds - DC

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,6 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
+displayName=Tree Run Helper
+author=ChopinDavid
+support=https://github.com/ChopinDavid/tree-run-helper/issues
+description=An external plugin to help with tree runs. 
 tags=
-plugins=com.example.ExamplePlugin
+plugins=com.chopindavid.TreeRunHelper
